MFE translation not working in shell version

--- a/src/app/feature/feature.component.html
+++ b/src/app/feature/feature.component.html
@@ -1,5 +1,5 @@
 <main>
   <h1>MFE</h1>
-  <p>{{ "HELLO" | translate }} message with translate pipe</p>
+  <p>{{ "HELLO.MESSAGE" | translate }} message with translate pipe</p>
   <p>{{ helloFromService }} message with translate service</p>
 </main>
