Configure mfe2 as a remote

--- a/src/app/feature/feature.component.html
+++ b/src/app/feature/feature.component.html
@@ -1,5 +1,5 @@
 <main>
-  <h1>MFE</h1>
-  <p>{{ "HELLO.MESSAGE" | translate }} message with translate pipe</p>
+  <h1>MFE 2</h1>
+  <p>{{ "MFE2.HELLO.MESSAGE" | translate }} message with translate pipe</p>
   <p>{{ helloFromService }} message with translate service</p>
 </main>
